src/styles/global.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@media (prefers-color-scheme: dark) {
    :root {
        --foreground-colour: #151515;
        --background-colour: #242424;
        --selection-colour: #065273;
        --link-colour-default: #2980b9;
        --link-colour-visited: #e6e6e6;
        --link-colour-active: #47f390;
    }
}

@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300;400&family=Rubik:ital,wght@0,300;0,400;1,300&display=swap');

body {
    max-height: 100%;
    color: var(--foreground-colour);
    background: var(--background-colour);
    padding: 2em;
    font-family: "Rubik", sans-serif;
    color: #e6e6e6;

    animation: fadein 1.5s;
}

footer {
    /* bottom of the page */
    position: fixed;
    left: 0;
    bottom: 0;
    width: 100%;
    text-align: center;
    padding: 1em;
    background-color: var(--background-colour);
    color: var(--foreground-colour);
    font-size: 0.8em;
}

@keyframes fadein {
    from {
        opacity: 0;
    }

    to {
        opacity: 1;
    }
}
::selection {
    background: var(--selection-colour);
}

h1 {
    font-family: "Rubik", monospace;
}

h2 {
    font-family: "Rubik", monospace;
    font-size: 2em;
    padding: 0.5em 0;
}

h3 {
    font-family: "Rubik", monospace;
    font-size: 1.5em;
    padding: 0.5em 0;
}

p {
    font-size: 18px;
}

a {
    margin-right: 0.3em;
    color: var(--link-colour-default);
    text-decoration: none;
    font-size: 20px;
}

a:visited {
    color: var(--link-colour-visited);
}

a:active {
    color: var(--link-colour-active);
}

button {
    padding: 9px 25px;
    background-color: rgba(87, 87, 87, 0.103);
    border: none;
    border-radius: 50px;
    cursor: pointer;
    transition: all 0.3s ease 0s;
}

button:hover {
    background-color: rgb(87, 87, 87);
}

/* code blocks */

pre {
    background-color: var(--foreground-colour);
    border-radius: 10px;
    padding: 1em;
    margin: 1em 0;
    font-size: 15px;

    /* handle small devices */
    overflow-x: auto;
}

code {
    font-size: 15px;
    color: #e6e6e6;
    font-family: "JetBrains Mono", monospace;
}

ul {
    list-style: disc;
    padding-left: 1.5em;
}

